# mirror-cpp

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
mirror-cpp/: CMakeLists.txt  mirror-cpp.hpp  mirror.cpp  mirror.hpp  value.hpp
test/: CMakeLists.txt  main.cpp  mirror_unittests.cpp
